added accessibility features

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <div id="about-me">
       <div id="about-overlay">
         <div id="name-card">
-          <img src="./Assets/Headshot.png" id="tyler">
+          <img src="./Assets/Headshot.png" id="tyler" alt="Headshot of Tyler in a library.">
           <div>
             <h1 id="name">Tyler Gurth</h1>
             <p>Brown University, co 2025</p>
           </div>
         </div>
         <div id="about">
-          <h1>About Me</h1>
+          <h2>About Me</h2>
           <blockquote>
             20 yrs old, he/him.
           </blockquote>
@@ -80,12 +80,13 @@
   </div>
 
   <div class="page-section">
-    <h1 class="section-title">Projects</h1>
+    <h2 class="section-title">Projects</h2>
     <div id="project-section">
       <div class="project-box">
         <div class="project-images">
-          <img class="project-pic" src="./Assets/MST.png" />
-          <img class="project-pic" src="./Assets/SortedMatrix.png" />
+          <img class="project-pic" src="./Assets/MST.png" alt="Picture of Minimum Spanning Tree of images." />
+          <img class="project-pic" src="./Assets/SortedMatrix.png"
+            alt="Picture of a sorted matrix graph with trend line." />
         </div>
         <div class="project-info">
           <h2 class="project-title">The Virtual Rosetta (Research)</h2>
@@ -133,16 +134,17 @@
           </ul>
         </div>
         <div class="project-images">
-          <img class="project-pic" src="./Assets/GameRoom.png" />
-          <img class="project-pic" src="./Assets/leaderboard.png" />
+          <img class="project-pic" src="./Assets/GameRoom.png" alt="Screenshot of the game room panel." />
+          <img class="project-pic" src="./Assets/leaderboard.png" alt="Screenshot of the leaderboard." />
         </div>
       </div>
 
       <div class="project-box">
         <div class="project-images">
-          <img class="project-pic" src="./Assets/friends.png" />
-          <img class="project-pic" src="./Assets/scrappypage.png" />
-          <img class="project-pic" src="./Assets/scrappyprofile.png" />
+          <img class="project-pic" src="./Assets/friends.png" alt="Screenshot of Scrappy Friends page." />
+          <img class="project-pic" src="./Assets/scrappypage.png" alt="Screenshot of gallery discovery page." />
+          <img class="project-pic" src="./Assets/scrappyprofile.png"
+            alt="Screenshot of a typical scrappy profile page." />
         </div>
         <div class="project-info">
           <h2 class="project-title">Scrappy</h2>
@@ -179,7 +181,7 @@
 
 
   <div class="page-section">
-    <h1 class="section-title">Experience</h1>
+    <h2 class="section-title">Experience</h2>
     <div id="experience-section">
       <div class="experience-box">
         <h3>Head Teaching Assistant, Brown University Computer Science</h3>
@@ -206,45 +208,72 @@
   </div>
 
   <div class="page-section">
-    <h1 class="section-title">Personal 3D Project Gallery</h1>
+    <h2 class="section-title">Personal 3D Project Gallery</h2>
     <div id="gallery">
-      <div class="gallery-caption-pair">
-        <img src="Assets/CinematicStill.png" width="100%" class="gallery-pic">
-        <div class="caption">
-          <p>Brown Sciences Library, 2022.</p>
+      <div class="gallery-year" id="2022">
+        <div class="year-content">
+          <div class="gallery-caption-pair">
+            <img src="Assets/Sayles.png" width="100%" class="gallery-pic" alt="3D Render of Sayles Hall.">
+            <div class="gallery-caption">
+              <p>Brown University Sayles Hall, 2022.</p>
+            </div>
+          </div>
+          <div class="gallery-caption-pair">
+            <img src="Assets/CinematicStill.png" width="100%" class="gallery-pic"
+              alt="3D Render of Brown Sciences Library.">
+            <div class="gallery-caption">
+              <p>Brown Sciences Library, 2022.</p>
+            </div>
+          </div>
+          <div class="gallery-caption-pair">
+            <img src="Assets/CompleteValley.png" width="100%" class="gallery-pic"
+              alt="3D Render of fantasy valley with Boat.">
+            <div class="gallery-caption">
+              <p>Valley with Boat, 2022</p>
+            </div>
+          </div>
+        </div>
+        <div class="year-timeline">
+          <div class="year-box">
+            <h3>2022</h3>
+          </div>
+          <div class="year-line">
+          </div>
         </div>
       </div>
-      <div class="gallery-caption-pair">
-        <img src="Assets/CompleteValley.png" width="100%" class="gallery-pic">
-        <div class="caption">
-          <p>Valley with Boat, 2022</p>
+      <div class="gallery-year">
+        <div class="year-content">
+          <div class="gallery-caption-pair">
+            <img src="Assets/outhouse.png" width="100%" class="gallery-pic"
+              alt="3D Voxel Art of an old Outhouse and Chickens.">
+            <div class="gallery-caption">
+              <p>Outhouse, 2021.</p>
+            </div>
+          </div>
+          <div class="gallery-caption-pair">
+            <img src="Assets/oogway.png" width="100%" class="gallery-pic"
+              alt="3D Voxel Art of Master Oogway among trees.">
+            <div class="gallery-caption">
+              <p>Oogway, 2021.</p>
+            </div>
+          </div>
+          <div class="gallery-caption-pair">
+            <img src="Assets/deer.png" width="100%" class="gallery-pic"
+              alt="3D Voxel Art of a Deer standing on an island.">
+            <div class="gallery-caption">
+              <p>Deer on Isle, 2021.</p>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="gallery-caption-pair">
-        <img src="Assets/outhouse.png" width="100%" class="gallery-pic">
-        <div class="caption">
-          <p>Outhouse, 2021.</p>
-        </div>
-      </div>
-      <div class="gallery-caption-pair">
-        <img src="Assets/oogway.png" width="100%" class="gallery-pic">
-        <div class="caption">
-          <p>Oogway, 2021.</p>
-        </div>
-      </div>
-      <div class="gallery-caption-pair">
-        <img src="Assets/deer.png" width="100%" class="gallery-pic">
-        <div class="caption">
-          <p>Deer on Isle, 2021.</p>
-        </div>
-      </div>
-      <div class="gallery-caption-pair">
-        <img src="Assets/Sayles.png" width="100%" class="gallery-pic">
-        <div class="caption">
-          <p>Brown University Sayles Hall, 2022.</p>
-        </div>
-      </div>
+        <div class="year-timeline">
+          <div class="year-box">
+            <h3>2021</h3>
+          </div>
+          <div class="year-line">
 
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
