added some more info, fixed some grammar

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
           <blockquote>
             Hi! My name is Tyler Gurth, and I am currently double majoring
             in Computer Science and History of Art and Architecture at
-            Brown University. I also Head TA introductory computer science classes here.
+            Brown University. I also am a Head TA introductory computer science classes here.
           </blockquote>
           <blockquote>
             I am versed in Python, Java, HTML, CSS, JavaScript, C,
-            and Typescript. At Brown, I'm in the graphics and design track.
+            and Typescript. At Brown, I'm in the software and design track.
           </blockquote>
           <blockquote>
-            My interests lie in game development, software engineering, UI/UX, and
-            my research interests lie in art through artificial intelligence, and
+            My interests lie in game development, software engineering, and UI/UX.
+            My research interests lie in art through artificial intelligence, and
             art identification through AI.
           </blockquote>
           <blockquote>
@@ -122,7 +122,7 @@
           <p>
             The Escape Garden State Web Panel was a project I made for my previous employer, an escape
             room company in New Jersey. The site replaced an old, out-dated subscription site with a customized
-            web app for the needs of the company.
+            web app that fit the needs of the company.
           </p>
           <h3>Technical Details</h3>
           <ul>
@@ -186,8 +186,13 @@
       <div class="experience-box">
         <h3>Head Teaching Assistant, Brown University Computer Science</h3>
         <blockquote>
-          I serve as a Head Teaching Assistant for Brown CS' class on Discrete Structures and Probability.
-          Within the proof based class, I work on grading, communicating with students, and managing a staff of 30 TAs.
+          I serve as a Head Teaching Assistant for Brown Computer Science's class on Discrete Structures and
+          Probability, as well as the department's class "The Digital World", an introduction to programming and
+          computer history.
+          Within the proof based class, I work on grading, communicating with students, and managing a staff of 35 TAs.
+          In the introductory programming class, I develop new assignments, hold office hours, and manage a staff of 15
+          TAs.In both classes, I focus on course logistics, serving over 330 students (Discrete Structures) and 220 (The
+          Digital World) students.
         </blockquote>
       </div>
       <div class="experience-box">
