fixed grammar in bio

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <blockquote>
             Hi! My name is Tyler Gurth, and I am currently double majoring
             in Computer Science and History of Art and Architecture at
-            Brown University. I also am a Head TA introductory computer science classes here.
+            Brown University. I also am a Head TA for introductory computer science classes here.
           </blockquote>
           <blockquote>
             I am versed in Python, Java, HTML, CSS, JavaScript, C,
