--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
             always up to connect! <a href="mailto:tgurth21@gmail.com">Or, email me!</a>
           </blockquote>
           <blockquote>
+            Want more info? Check out my <a href="https://tylergurth.com/TylerGurthResume.pdf"
+              target="_blank">resume</a>.
+          </blockquote>
+          <blockquote>
             Find me on my socials!
 
           </blockquote>
