fixed some grammar and styling

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
   </div>
 
   <div class="page-section">
-    <h2 class="section-title">Projects</h2>
     <div id="project-section">
+      <h2 class="section-title">Projects</h2>
       <div class="project-box">
         <div class="project-images">
           <img class="project-pic" src="./Assets/MST.png" alt="Picture of Minimum Spanning Tree of images." />
@@ -186,8 +186,8 @@
 
 
   <div class="page-section">
-    <h2 class="section-title">Experience</h2>
     <div id="experience-section">
+      <h2 class="section-title">Experience</h2>
       <div class="experience-box">
         <h3>Head Teaching Assistant, Brown University Computer Science</h3>
         <blockquote>
@@ -196,7 +196,8 @@
           computer history.
           Within the proof based class, I work on grading, communicating with students, and managing a staff of 35 TAs.
           In the introductory programming class, I develop new assignments, hold office hours, and manage a staff of 15
-          TAs.In both classes, I focus on course logistics, serving over 330 students (Discrete Structures) and 220 (The
+          TAs. In both classes, I focus on course logistics, serving over 330 students (Discrete Structures) and 220
+          (The
           Digital World) students.
         </blockquote>
       </div>
@@ -218,7 +219,7 @@
   </div>
 
   <div class="page-section">
-    <h2 class="section-title">Personal 3D Project Gallery</h2>
+    <h2 class="section-title" id="gall-title">Personal 3D Project Gallery</h2>
     <div id="gallery">
       <div class="gallery-year" id="2022">
         <div class="year-content">
