added language tags

--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
           <div>
             <h1 id="name">Tyler Gurth</h1>
             <p>Brown University, co 2025</p>
+            <p>
+              20 yrs old, he/him.
+            </p>
           </div>
         </div>
         <div id="about">
           <h2>About Me</h2>
-          <blockquote>
-            20 yrs old, he/him.
-          </blockquote>
           <blockquote>
             Hi! My name is Tyler Gurth, and I am currently double majoring
             in Computer Science and History of Art and Architecture at
             Brown University. I also am a Head TA for introductory computer science classes here.
           </blockquote>
           <blockquote>
-            I am versed in Python, Java, HTML, CSS, JavaScript, C,
-            and Typescript. At Brown, I'm in the software and design track.
+            I am versed in <strong>Python, HTML, CSS, Java, JavaScript, C, C++,
+              and Typescript.</strong> At Brown, I'm in the software and design track.
           </blockquote>
           <blockquote>
             My interests lie in game development, software engineering, and UI/UX.
@@ -114,6 +114,11 @@
               types and compile datasets.</li>
             <li>Visualized complex data in actionable graphs using PyPlot, revealing qualitative trends.</li>
           </ul>
+          <div class="skills">
+            <div class="tech-skill" style="background-color: rgba(46, 255, 46, 0.351);">Python</div>
+            <div class="tech-skill" style="background-color: rgba(255, 245, 129, 0.351);">HTML</div>
+            <div class="tech-skill" style="background-color: rgba(255, 215, 129, 0.351);">Excel</div>
+          </div>
         </div>
       </div>
 
@@ -137,6 +142,11 @@
             <li>Developed utils for statistic tracking, to be used for further adveritsiing and data analysis.</li>
             <li>Designed, and created with original CSS, a GUI for employees to run the escape rooms.</li>
           </ul>
+          <div class="skills">
+            <div class="tech-skill" style="background-color: rgba(139, 247, 255, 0.351);">Javascript</div>
+            <div class="tech-skill" style="background-color: rgba(255, 245, 129, 0.351);">HTML</div>
+            <div class="tech-skill" style="background-color: rgba(139, 255, 195, 0.351);">CSS</div>
+          </div>
         </div>
         <div class="project-images">
           <img class="project-pic" src="./Assets/GameRoom.png" alt="Screenshot of the game room panel." />
@@ -170,6 +180,13 @@
             <li>Personally programmed an NLP sorting algorithm using English feature vectors to sort posts based on
               Hashtags.</li>
           </ul>
+          <div class="skills">
+            <div class="tech-skill" style="background-color: rgba(139, 247, 255, 0.351);">Javascript</div>
+            <div class="tech-skill" style="background-color: rgba(195, 251, 255, 0.351);">Typescript</div>
+            <div class="tech-skill" style="background-color: rgba(255, 245, 129, 0.351);">HTML</div>
+            <div class="tech-skill" style="background-color: rgba(139, 255, 195, 0.351);">CSS</div>
+            <div class="tech-skill" style="background-color: rgba(220, 139, 255, 0.351);">Java</div>
+          </div>
         </div>
       </div>
 
