--- a/index.html
+++ b/index.html
@@ -226,6 +226,22 @@
           math utils for calculating scores and times.
         </blockquote>
       </div>
+      <div class="experience-box">
+        <h3>Technical Skills</h3>
+        <div id="experience-skills">
+          <div class="tech-skill" style="background-color: rgba(139, 247, 255, 0.351); width: 80%;">Javascript</div>
+          <div class="tech-skill" style="background-color: rgba(195, 251, 255, 0.351); width: 70%;">Typescript</div>
+          <div class="tech-skill" style="background-color: rgba(255, 245, 129, 0.351); width: 95%;">HTML</div>
+          <div class="tech-skill" style="background-color: rgba(139, 255, 195, 0.351); width: 92%;">CSS</div>
+          <div class="tech-skill" style="background-color: rgba(220, 139, 255, 0.351); width: 95%;">Java</div>
+          <div class="tech-skill" style="background-color: rgba(255, 215, 129, 0.351); width: 65%;">Excel</div>
+          <div class="tech-skill" style="background-color: rgba(255, 186, 129, 0.351); width: 55%;">C / C++</div>
+        </div>
+
+        <blockquote>
+          React, MongoDB, AWS, Node, GitHub, Git, Firebase, Jest, Figma, Blender, Photoshop, and Microsoft Office Suite
+        </blockquote>
+      </div>
     </div>
     <div class="caption">
       <p>Flowers on a Window Ledge, c. 1861. John La Farge.</p>
