redid header and animation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <div id="nav-bar">
       <div id="about-anchor" class="nav-element">About</div>
       <div id="project-anchor" class="nav-element">Projects</div>
-      <div id="name-in-nav">Tyler Gurth</div>
+      <div id="img-in-nav-holder">
+        <hr class="nav-line" />
+        <p>TG</p>
+        <hr class="nav-line" />
+      </div>
       <div id="experience-anchor" class="nav-element">Experience</div>
       <div id="gallery-anchor" class="nav-element">Gallery</div>
     </div>
@@ -211,8 +215,10 @@
           I serve as a Head Teaching Assistant for Brown Computer Science's class on Discrete Structures and
           Probability, as well as the department's class "The Digital World", an introduction to programming and
           computer history.
-          Within the proof based class, I work on grading, communicating with students, and managing a staff of 35 TAs.
-          In the introductory programming class, I develop new assignments, hold office hours, and manage a staff of 15
+          Within the proof based class, I work on grading, communicating with students, and managing a staff of 35
+          TAs.
+          In the introductory programming class, I develop new assignments, hold office hours, and manage a staff of
+          15
           TAs. In both classes, I focus on course logistics, serving over 330 students (Discrete Structures) and 220
           (The
           Digital World) students.
@@ -239,7 +245,8 @@
         </div>
 
         <blockquote>
-          React, MongoDB, AWS, Node, GitHub, Git, Firebase, Jest, Figma, Blender, Photoshop, and Microsoft Office Suite
+          React, MongoDB, AWS, Node, GitHub, Git, Firebase, Jest, Figma, Blender, Photoshop, and Microsoft Office
+          Suite
         </blockquote>
       </div>
     </div>
