started working on modern site

--- a/index.html
+++ b/index.html
@@ -194,6 +194,32 @@
         </div>
       </div>
 
+      <div class="project-box">
+        <!-- <div class="project-images">
+          <img class="project-pic" src="./Assets/friends.png" alt="Screenshot of Scrappy Friends page." />
+          <img class="project-pic" src="./Assets/scrappypage.png" alt="Screenshot of gallery discovery page." />
+          <img class="project-pic" src="./Assets/scrappyprofile.png"
+            alt="Screenshot of a typical scrappy profile page." />
+        </div> -->
+        <div class="project-info">
+          <h2 class="project-title">Design Study : Modern Portfolio</h2>
+          <hr class="project-hr">
+          </hr>
+          <p>
+            To show breadth, I made a replica of my portfolio site! Feel free to click the button
+            to see the "modern" version of this site. (This one definitely fits my personal style more!)
+          </p>
+          <button class="page-button" onclick="window.open('modern.html')">Modern
+            Site</button>
+
+          <div class="skills">
+            <div class="tech-skill" style="background-color: rgba(139, 247, 255, 0.351);">Javascript</div>
+            <div class="tech-skill" style="background-color: rgba(255, 245, 129, 0.351);">HTML</div>
+            <div class="tech-skill" style="background-color: rgba(139, 255, 195, 0.351);">CSS</div>
+          </div>
+        </div>
+      </div>
+
 
 
     </div>
